--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -8,6 +8,7 @@
 
 .header-rutas {
   background-image: url('../img/rutas.jpg');
+  transform: rotate(0deg);
   background-attachment: fixed;
 }
 
@@ -30,6 +31,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  transform: rotate(0deg);
   background-attachment: fixed;
   .background-image {
     width: 100%;
