--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -21,6 +21,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  transform: rotate(0deg);
   background-attachment: fixed; }
   .header-event .header-container {
     margin-top: 90px; }
@@ -113,6 +114,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  transform: rotate(0deg);
   background-attachment: fixed; }
   .header-experience .header-container {
     margin-top: -30px; }
@@ -262,6 +264,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  transform: rotate(0deg);
   background-attachment: fixed; }
   .header-ruta .background-image {
     width: 100%;
