--- a/plugins/rainlab/pages/assets/css/style-village.css
+++ b/plugins/rainlab/pages/assets/css/style-village.css
@@ -127,6 +127,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  transform: rotate(0deg);
   background-attachment: fixed;
   z-index: 10;
   border-top: 80px solid white;
@@ -192,6 +193,7 @@
   background-repeat: no-repeat !important;
   background-position: center !important;
   background-size: cover !important;
+  transform: rotate(0deg);
   background-attachment: fixed !important;
   z-index: 100;
   background-color: white; }
@@ -259,6 +261,7 @@
   left: 172px; }
 
 .featured-flamenco {
+  transform: rotate(0deg);
   background-attachment: fixed; }
   .featured-flamenco .txt-container {
     width: 77%;
