--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -581,6 +581,7 @@ html, body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  transform: rotate(0deg);
   background-attachment: fixed; }
 
 .header .header-container {
@@ -730,6 +731,7 @@ html, body {
   background-color: transparent;
   background-size: cover;
   background-repeat: no-repeat;
+  transform: rotate(0deg);
   background-attachment: fixed; }
 
 .header-search .header-txt {
@@ -796,6 +798,7 @@ html, body {
 .search-exp {
   background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%), url("../img/search-exp.jpg");
   background-attachment: fixed;
+  transform: rotate(0deg);
   background-size: cover; }
 
 #searchbar-events {
