--- a/plugins/rainlab/pages/assets/scss/style.css
+++ b/plugins/rainlab/pages/assets/scss/style.css
@@ -205,6 +205,7 @@ html, body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  transform: rotate(0deg);
   background-attachment: fixed; }
 
 .header .header-container {
@@ -348,6 +349,7 @@ html, body {
   background-color: transparent;
   background-size: cover;
   background-repeat: no-repeat;
+  transform: rotate(0deg);
   background-attachment: fixed; }
 
 .header-search .header-txt {
@@ -413,6 +415,7 @@ html, body {
 
 .search-exp {
   background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%), url("../img/search-exp.jpg");
+  transform: rotate(0deg);
   background-attachment: fixed;
   background-size: cover; }
 
