--- a/themes/default/layouts/playa.htm
+++ b/themes/default/layouts/playa.htm
@@ -41,26 +41,33 @@ $this['lang']=\App::getLocale();
         $this['urlPage'] = $this->page->url;
 
         if($this->page->apiBag){
+            
             if(isset($this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"])){
                 $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
             }
-if($this->page->settings["meta_title"]==null)
-$this['metaTitle'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
-else
-$this['metaTitle'] = $this->page->settings["meta_title"];
+            
+            if($this->page->settings["meta_title"]==null)
+            $this['metaTitle'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
+            else
+            $this['metaTitle'] = $this->page->settings["meta_title"];
 
-if($this->page->settings["meta_description"]==null){
-$this['metaDescription'] = $this->page->apiBag["staticPage"]->attributes["content"];
-if(explode('<p class="desc">',$this['metaDescription'])[1])
-$this['metaDescription'] = explode('</p>',explode('<p class="desc">',$this['metaDescription'])[1])[0];
+            if($this->page->settings["meta_description"]==null){
+                
+                $this['metaDescription'] = $this->page->apiBag["staticPage"]->attributes["content"];
+            
+                if(isset(explode('<p class="desc">',$this['metaDescription'])[1])){
+                    
+                    $this['metaDescription'] = explode('</p>',explode('<p class="desc">',$this['metaDescription'])[1])[0];
 
-    if(strlen($this['metaDescription'])>225)
-    $this['metaDescription'] = substr($this['metaDescription'], 0, 225).'...';
-
-    }else
-    $this['metaDescription'] = $this->page->settings["meta_description"];
+                    if(strlen($this['metaDescription'])>225){
+                        $this['metaDescription'] = substr($this['metaDescription'], 0, 225).'...';
+                    }
+                }
+            
+            }else
+               $this['metaDescription'] = $this->page->settings["meta_description"];                
+            }
         }
-
     }
 
 ?>
