--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -60,8 +60,8 @@ code = "redes-sociales"
                     }
                 }
             
-            }else
-               $this['metaDescription'] = $this->page->settings["meta_description"];                
+            } else {
+               $this['metaDescription'] = $this->page->settings["meta_description"];   
             }
                  
         }
