--- a/themes/default/layouts/playa.htm
+++ b/themes/default/layouts/playa.htm
@@ -64,7 +64,7 @@ $this['lang']=\App::getLocale();
                     }
                 }
             
-            }else
+             } else {
                $this['metaDescription'] = $this->page->settings["meta_description"];                
             }
         }
