--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -55,7 +55,7 @@ code = "redes-sociales"
                     }
                 }
             
-            }else
+            } else {
                $this['metaDescription'] = $this->page->settings["meta_description"];                
             } 
         }
