--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -63,7 +63,7 @@ code = "redes-sociales"
                     }
                 }
             
-            }else
+             } else {
                $this['metaDescription'] = $this->page->settings["meta_description"];                
             }    
             
