--- a/themes/default/layouts/experience.htm
+++ b/themes/default/layouts/experience.htm
@@ -61,7 +61,7 @@ code = "redes-sociales"
                     }
                 }
             
-            }else
+            } else {
                $this['metaDescription'] = $this->page->settings["meta_description"];                
             }
         
