--- a/themes/default/layouts/publicacion.htm
+++ b/themes/default/layouts/publicacion.htm
@@ -69,7 +69,7 @@ code = "redes-sociales"
                     }
                 }
             
-            }else
+             } else {
                $this['metaDescription'] = $this->page->settings["meta_description"];                
             }
         }
