--- a/themes/default/layouts/reportaje.htm
+++ b/themes/default/layouts/reportaje.htm
@@ -67,7 +67,7 @@ code = "redes-sociales"
                     }
                 }
             
-            }else
+            } else {
                $this['metaDescription'] = $this->page->settings["meta_description"];                
             }
         }
