--- a/themes/default/layouts/ruta.htm
+++ b/themes/default/layouts/ruta.htm
@@ -64,7 +64,7 @@ code = "redes-sociales"
                     }
                 }
             
-            }else
+             } else {
                $this['metaDescription'] = $this->page->settings["meta_description"];                
             }
         }
