--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -58,6 +58,22 @@
                                 </a>
                             </li>
 
+                            <li class="<?= $isActive ? 'active' : null ?> svg-icon-container svg-active-effects">
+                                <a href="/backend/backend/empresas">
+                                    <span class="nav-icon">
+                                        <?php if ($item->iconSvg): ?>
+                                            <img class="svg-icon" src="<?= config('app.urlApp') ?>modules/system/assets/images/home.svg">
+                                        <?php endif ?>
+
+                                        <i class="<?= $item->iconSvg ? 'svg-replace' : null ?> <?= $item->icon ?>"></i>
+                                    </span>
+
+                                    <span class="nav-label">
+                                        Empresas
+                                    </span>
+                                </a>
+                            </li>
+
                         <?php } ?>
 
                         <?php if( $item->iconSvg == 'modules/system/assets/images/cog-icon.svg' and $this->user->is_superuser == 1 ){ ?>
