--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3687,3 +3687,87 @@ footer {
 #title-events {
   width: 75%;
 }
+
+//BUSSINES - Juan
+
+.bussinesPage{
+  .whatDoYouNeedCadiz{
+    font-family: AvenirNext-Medium;
+    font-size: 23px;
+    color: #FFFFFF;
+    line-height: 33px;
+    margin-bottom: 86px;
+  }
+  #search-event{
+    width: 863px;
+    .search-bar{
+      width: 825px;
+
+      #empresa-category{
+        width: 340px;
+      }
+
+    }
+  }
+
+}
+  ul.content.bussinesPage{
+    list-style-type:none;
+    text-align: center;
+    padding: 0;
+    margin: auto;
+    margin-top: 212px;
+    margin-bottom: 60px;
+    display: table;
+    width: 100%;
+    &>li{
+      vertical-align: top;
+      border-right: 1px solid #CECECE;
+      display: table-cell;
+      margin: 0em;
+      padding: 1em;
+      height: auto;
+      &:last-child{
+        border-right: 0;
+      }
+      &>img{
+        position: relative;
+        display: block;
+        top: -50px;
+        margin: auto;
+        margin-top: -7px;
+      }
+      ul{
+        list-style-type:none;
+        text-align: left;
+        padding: 0;
+        display: inline-block;
+        p{
+          font-family: AvenirNext-DemiBold;
+          font-size: 39px;
+          color: #4A4A4A;
+          line-height: 42px;
+          max-width: 237px;
+          text-align: center;
+          margin-bottom: 58px;
+        }
+        &>li{
+          a{
+            font-family: AvenirNext-Medium;
+            font-size: 16px;
+            color: #9B9B9B;
+            line-height: 33px;
+            transition: all 0.3s;
+            &:hover{
+              opacity: 0.5;
+              text-decoration: none;
+            }
+            img{
+              margin-left: 22px;
+            }
+          }
+        }
+
+      }
+    }
+  }
