--- a/themes/default/layouts/publicacion.htm
+++ b/themes/default/layouts/publicacion.htm
@@ -67,10 +67,14 @@ code = "redes-sociales"
                     if(strlen($this['metaDescription'])>225){
                         $this['metaDescription'] = substr($this['metaDescription'], 0, 225).'...';
                     }
+                
+                } else {
+                    
+                     $this['metaDescription'] = '';
                 }
             
-             } else {
-               $this['metaDescription'] = $this->page->settings["meta_description"];                
+            } else {
+               $this['metaDescription'] = $this->page->settings["meta_description"];   
             }
         }
     }
