--- a/themes/default/layouts/ruta.htm
+++ b/themes/default/layouts/ruta.htm
@@ -50,7 +50,6 @@ code = "redes-sociales"
             else
             $this['metaTitle'] = $this->page->settings["meta_title"];
 
-
             if($this->page->settings["meta_description"]==null){
                 
                 $this['metaDescription'] = $this->page->apiBag["staticPage"]->attributes["content"];
@@ -62,10 +61,14 @@ code = "redes-sociales"
                     if(strlen($this['metaDescription'])>225){
                         $this['metaDescription'] = substr($this['metaDescription'], 0, 225).'...';
                     }
+                
+                } else {
+                    
+                     $this['metaDescription'] = '';
                 }
             
-             } else {
-               $this['metaDescription'] = $this->page->settings["meta_description"];                
+            } else {
+               $this['metaDescription'] = $this->page->settings["meta_description"];   
             }
         }
     }
