--- a/themes/default/layouts/reportaje.htm
+++ b/themes/default/layouts/reportaje.htm
@@ -65,10 +65,14 @@ code = "redes-sociales"
                     if(strlen($this['metaDescription'])>225){
                         $this['metaDescription'] = substr($this['metaDescription'], 0, 225).'...';
                     }
+                
+                } else {
+                    
+                     $this['metaDescription'] = '';
                 }
             
             } else {
-               $this['metaDescription'] = $this->page->settings["meta_description"];                
+               $this['metaDescription'] = $this->page->settings["meta_description"];   
             }
         }
 
