--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3770,4 +3770,85 @@ footer {
 
       }
     }
+
   }
+    #prtlEmpresasl.bussinesPage{
+      ul {
+        padding: 0;
+        margin: auto;
+        margin-top: 212px;
+        margin-bottom: 60px;
+        display: block;
+        width: 65%;
+        font-size: 0;
+
+        & > li {
+          &:before{
+            content: '';
+            width: 1px;
+            position: absolute;
+            top: 40px;
+            right: 0px;
+            height: 76.7%;
+            background-color: #CECECE;
+          }
+          vertical-align: top;
+          border-bottom: 1px solid #CECECE;
+
+          display: inline-block;
+          margin-right: -4px;
+          margin: 0em;
+          padding: 1em;
+          height: 280px;
+          width: 367px;
+          position: relative;
+          padding: 20px;
+          &>h3{
+            /* ANDALUSIA TOUR TRAVE Copy 6: */
+            font-family: AvenirNext-UltraLight;
+            font-size: 48px;
+            color: #9B9B9B;
+            line-height: 51px;
+          }
+          &>p{
+            /* Andalusia Tour Trave Copy 3: */
+            font-family: AvenirNext-Medium;
+            font-size: 16px;
+            color: #9B9B9B;
+            line-height: 33px;
+          }
+          &:nth-child(3n) {
+            &:before{
+              content: none;
+            }
+
+            }
+          & > span {
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            img{
+              margin-right: 10px;
+            }
+            p{
+              display: inline-block;
+              /* Jerez de la Frontera Copy 3: */
+              font-family: AvenirNext-Medium;
+              font-size: 16px;
+              color: #CECECE;
+              line-height: 33px;
+            }
+            a{
+              /* Saber más: */
+              font-family: AvenirNext-Bold;
+              font-size: 15px;
+              color: #F5A623;
+              line-height: 27px;
+              float: right;
+              right: 41px;
+              position: relative;
+            }
+          }
+        }
+      }
+    }
