--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4104,7 +4104,7 @@ ul.content.bussinesPage {
   text-align: center;
   padding: 0;
   margin: auto;
-  margin-top: 212px;
+  margin-top: 14%;
   margin-bottom: 60px;
   display: table;
   width: 100%;
@@ -4165,7 +4165,7 @@ ul.content.bussinesPage {
   ul {
     padding: 0;
     margin: auto;
-    margin-top: 212px;
+    margin-top: 14%;
     margin-bottom: 60px;
     display: block;
     width: 65%;
@@ -4178,7 +4178,7 @@ ul.content.bussinesPage {
         position: absolute;
         top: 40px;
         right: 0px;
-        height: 76.7%;
+        height: 81.7%;
         background-color: #CECECE;
       }
       vertical-align: top;
@@ -4188,7 +4188,7 @@ ul.content.bussinesPage {
       margin-right: -4px;
       margin: 0em;
       padding: 1em;
-      height: 280px;
+      height: 343px;
       width: 367px;
       position: relative;
       padding: 20px;
@@ -4280,8 +4280,10 @@ ul.content.bussinesPage {
       font-size: 64px;
       color: #4A4A4A;
       line-height: 65px;
+      margin-bottom: 54px;
     }
     p{
+      margin-top: 64px;
       /* Andalusia Tour Trave: */
       font-family: AvenirNext-Medium;
       font-size: 18px;
