--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -21,8 +21,9 @@
 	</ul>
 {% else %}
 
-	<div class="search-title-container">
-	     <p class="title-search"> {{ 'No hemos encontrado resultados que se adapten a tus criterios.'|_ }}</p>
+	<div class="search-title-container" style="display: block; text-align: center; position: relative;">
+	     <p class="title-search" style="margin-top: 87px;    max-width: 530px;  margin: auto;"> {{ 'Los sentinos, no hemos encontrado empresas que se ajusten a tus criterios de búsqueda en estos momentos.'|_ }}</p>
+		<img style="display: inline-block;margin-top: 87px;" src="{{'assets/img/search2.svg'|theme}}" alt="">
 	</div>
 
 {% endif %}
