--- a/themes/default/partials/site/searchempresa.htm
+++ b/themes/default/partials/site/searchempresa.htm
@@ -34,7 +34,7 @@
                     {% for key,value in types %}
                         <option value="{{str_slug(value)}}">{{ value |_ }}</option>
                     {% endfor %}
-                    <option value="todos-los-tipos" selected=>{{'Todos los tipos'|_ }}</option>
+                    <option value="todos-los-tipos" selected=>{{'Todas las empresas'|_ }}</option>
                   </select>
                   <span class="select-title">{{ 'TIPO DE EMPRESA'|_ }}</span>
                 </div>
