--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -22,7 +22,7 @@
 {% else %}
 
 	<div class="search-title-container" style="display: block; text-align: center; position: relative;">
-	     <p class="title-search" style="margin-top: 87px;    max-width: 530px;  margin: auto;"> {{ 'Los sentinos, no hemos encontrado empresas que se ajusten a tus criterios de búsqueda en estos momentos.'|_ }}</p>
+	     <p class="title-search" style="margin-top: 87px;    max-width: 530px;  margin: auto;"> {{ 'Lo sentimos, no hemos encontrado empresas que se ajusten a tu criterio de búsqueda.'|_ }}</p>
 		<img style="display: inline-block;margin-top: 87px;" src="{{'assets/img/search2.svg'|theme}}" alt="">
 	</div>
 
