--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -13,7 +13,7 @@
 			</p>
 			<span>
 				<p><img src="{{'assets/img/map.svg'|theme}}" alt="">{{empresa.municipality | capitalize}}</p>
-				<a href="{{url('/')}}/{{lang}}/empresa/{{empresa.slug}}">{{'Saber mas'|_}}</a>
+				<a href="{{url('/')}}/{{lang}}/empresa/{{empresa.slug}}">{{'Saber más'|_}}</a>
 			</span>
 		</li>	
 		
