--- a/themes/default/partials/site/searchempresa.htm
+++ b/themes/default/partials/site/searchempresa.htm
@@ -25,7 +25,7 @@
 
 ==
 
-<div id="search-event" class="search-bar-container">
+<div id="search-event" class="search-bar-container" style="margin: auto">
           <div class="search-bar">
             <form data-request="onFindEmpresa">
               <div class="inputs-container">
