--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4295,3 +4295,7 @@ ul.content.bussinesPage {
     margin-top: 130px;
   }
 }
+
+.header-search .header-txt .txt .first-word {
+  line-height: 165px;
+}
