--- a/themes/default/partials/site/menu.htm
+++ b/themes/default/partials/site/menu.htm
@@ -102,6 +102,7 @@
             {% set tt = '.'~item.title %}
             <li class="menu-item"><a href="{{ item.url }}">{{ tt|_ }}</a></li>
           {% endfor %}
+          <li><a href="{{url('/')}}/{{lang}}/empresas">{{'Empresas'|_ }}</a></li>
         </ul>
       </div>
     </div>
