--- a/themes/default/partials/site/footer.htm
+++ b/themes/default/partials/site/footer.htm
@@ -1,12 +1,12 @@
 <footer>
     <div class="footer-container">
       <div class="left-container">
-        <a href="{{url('/')}}/{{lang}}"><img style="margin-right: 30px;" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg" alt="logo cádiz"> </a>
+        <a class="footer-link" href="{{url('/')}}/{{lang}}"><img style="margin-right: 30px;" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg" alt="logo cádiz"> </a>
         <div class="links-container">
           {% for item in staticMenu5.menuItems %}
             {% set tt = '.'~item.title %}
             <a href="{{ item.url }}">{{ tt|_ }}</a>
-            {% if item.title == 'Publicaciones' %} 
+            {% if item.title == 'Publicaciones' %}
                <a href="{{url('/')}}/{{lang}}/empresas">{{'Empresas'|_ }}</a>
             {% endif %}
           {% endfor %}
