--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3816,7 +3816,7 @@ html, body {
           margin: 0px !important;
         }
       }
-      .social {
+      .links-container {
         a {
           margin-right: 0px !important;
           margin-bottom: 13px !important;
