--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2047,6 +2047,13 @@ html, body {
   top: 820px; }
   #out-features .feature {
     min-width: 60px; }
+  #out-features .feature-exp .link-exp {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column; }
 
 #header-event-fr .header-container {
   margin-top: 0px; }
